<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImgProc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Title</string>
    <string name="main_header">Menu</string>
    
    <string name="camera_title">Camera</string>
    <string name="camera_subtitle">See results of your algorithm</string>
    <string name="camera_label">camera</string>
    
    <string name="felix_title">Felix</string>
    <string name="felix_subtitle">Felix Sandlåda</string>
    <string name="felix_label">felix</string>
    
        
    <string name="oliver_title">Oliver</string>
    <string name="oliver_subtitle">Oliver Sandlåda</string>
    <string name="oliver_label">oliver</string>
    
    <string name="design_title">Create Algorithm</string>
    <string name="design_subtitle">Create your algorithm</string>
    <string name="design_label">design</string>
    <string name="new_item">New Item</string>
    <string name="design_current_item">Current Item</string>
    <string name="design_header">Select Item</string>
      
    <string name="design_canny_title">Canny</string>
    <string name="design_canny_subtitle">Canny edge detection</string>
    <string name="design_canny_label">canny</string>
    
    <string name="design_gray_title">Gray</string>
    <string name="design_gray_subtitle">Create gray scale image</string>
    <string name="design_gray_label">gray</string>
    <string name="design_button_next">Next</string>
    <string name="design_button_previous">Previous</string>
    <string name="design_button_check">Check</string>
    
    <string name="sensor_text_title">Sensor Title</string>
    <string name="sensor_text_1">Sensor 1</string>
    <string name="sensor_text_2">Sensor 2</string>
    <string name="sensor_text_3">Sensor 3</string>
    
    

</resources>
