<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DesignLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ExpandableListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="254dp" >
    </ExpandableListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/design_header" />

    <TextView
        android:id="@+id/DesignTextPrev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="Text Prev"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#696969" />

    <TextView
        android:id="@+id/DesignTextCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="Text Current"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/DesignTextNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="Text Next"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#696969" />

    <Button
        android:id="@+id/ButtonPrev"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:text="@string/design_button_previous" />

    <Button
        android:id="@+id/ButtonNext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:text="@string/design_button_next" />

    <Button
        android:id="@+id/ButtonCheck"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/design_button_check" />

</LinearLayout>